--- a/visualizacao/css/style.css
+++ b/visualizacao/css/style.css
@@ -79,6 +79,17 @@ h1 span {
   vertical-align: middle;
 }
 
+/* GRIDS */
+
+.grid .tick {
+        stroke: lightgrey;
+            opacity: 0.7;
+        }
+.grid path {
+        stroke-width: 0;
+}
+
+
 /* CODIGO REFERENTE AO GRAFICO*/
 #nomeTimeSelecionado {
   color: #20262C;
