Destaca linha caso o usuario a selecione com o click do mouse.

--- a/visualizacao/css/style.css
+++ b/visualizacao/css/style.css
@@ -97,7 +97,7 @@ h1 span {
   margin-bottom: 6px;
   margin-left: 6%;
   text-transform: uppercase;
-  font-family: 'flamabold', arial, sans-serif;
+  font-family: 'flamathin', arial, sans-serif;
 }
 
 #informacaoTimeSelecionado {
