--- a/visualizacao/css/style.css
+++ b/visualizacao/css/style.css
@@ -105,8 +105,8 @@ h1 span {
 }
 
 svg {
-  background-color:color|transparent;
-  margin-bottom: 100px;
+  background-color:#F0F0F0;
+  margin-bottom: 10px;
   -webkit-box-shadow: 0px 0px 20px rgba(0,0,0,0.1);
   box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
 }
@@ -114,8 +114,12 @@ svg {
 div.svgWrap {
     width:1000px;
     margin:0px auto;
+
 }
 
+#grafico2 {
+    background-color: #F0F0F0;
+}
 .axis path,
 .axis line {
   fill: none;
