--- a/visualizacao/css/style.css
+++ b/visualizacao/css/style.css
@@ -207,7 +207,7 @@ div.svgWrap {
     color:#be5b70;
 }
  
-.menu .arrow {
+.menu .arrowMenu {
     font-size:8px;
     line-height:0%;
 }
@@ -242,16 +242,20 @@ h1 .metodologia {
 }
  
 .sub-menu {
-    width:100%;
-    padding:5px 0px;
-    position:absolute;
-    top:100%;
-    left:0px;
-    z-index:-1;
-    opacity:0;
-    transition:opacity linear 0.15s;
-    box-shadow:0px 2px 3px rgba(0,0,0,0.2);
-    background:#1e2329;
+  width:160%;
+  padding:5px 0px;
+  position:absolute;
+  top:100%;
+  left:0px;
+  z-index:-1;
+  opacity:0;
+  transition:opacity linear 0.15s;
+  box-shadow:0px 2px 3px rgba(0,0,0,0.2);
+  background:#1e2329;
+  height: 360px;
+  overflow: scroll;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
  
 .sub-menu li {
@@ -389,7 +393,7 @@ h1 .metodologia {
   border-radius: 1px;
   margin-left: 120px;
 }
-.arrow{
+.arrowTooltip{
     border: solid;
     border-color: #20262C transparent;
     border-width: 6px 6px 0 6px;
@@ -398,3 +402,7 @@ h1 .metodologia {
     margin-left: 130px;
 }
 /* TOOLTIP */
+
+/* DROPDOWN SELECT */
+
+/* DROPDOWN SELECT */
