--- a/visualizacao/css/style.css
+++ b/visualizacao/css/style.css
@@ -36,18 +36,19 @@ body {
   margin: 0 auto;
   margin-top: 36px;
   margin-bottom: 20px;
-  text-align: right;
-  text-align: center;
   vertical-align: middle;
   /*border-bottom: 1px solid rgba(32,38,44,1.0);*/
 }
 
 h1 {
+    text-align: left;
+
+    padding:5px;
   text-transform: uppercase;
   font-family: 'flamabold';
-  font-size:48px;
+  font-size:30px;
   line-height:1.2;
-  color: #20262C;
+  color: ghostwhite;
   text-shadow:0px 1px 0px rgba(0,0,0,0.2);
 
 }
@@ -70,6 +71,7 @@ h1 span {
 #linhaFina p {
   color: #606060;
   font-size: 16px;
+    margin-top:15px;
   font-family: "flamabook";
   text-align: right;
   text-align: center;
