--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ h1 span {
 
 /*LINHA FINA*/
 #linhaFina {
-  width: 600px;
+  width: 90%;
   margin: 0 auto;
   margin-bottom: 26px;
 }
@@ -195,6 +195,11 @@ div.svgWrap {
  
  }
 
+.axis text {
+    color:black;
+  font-weight:bold;
+
+}
 .regua {
     stroke: black;
     fill: #D4AF6A;
